--- a/service/package.json
+++ b/service/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "restify": "2.6.1"
+    "restify": "2.6.1",
+    "temp": "0.7.0"
   }
 }
