--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dependencies": {
         "jquery": "2.1.0",
         "backbone": "1.1.2",
-        "restify": "2.6.1",
+        "express": "3.4.8",
         "temp": "0.7.0"
     }
 }
