--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "grunt": "0.4.4",
         "grunt-contrib-copy": "0.5.0",
         "grunt-contrib-concat": "0.3.0",
-        "grunt-contrib-clean": "0.5.0"
+        "grunt-contrib-clean": "0.5.0",
+        "grunt-cli": "0.1.13"
     },
     "dependencies": {
         "jquery": "2.1.0",
