--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
         "grunt-contrib-copy": "0.5.0",
         "grunt-contrib-concat": "0.3.0",
         "grunt-contrib-clean": "0.5.0",
-        "grunt-cli": "0.1.13"
+        "grunt-cli": "0.1.13",
+        "bower": "1.3.2"
     },
     "dependencies": {
-        "jquery": "2.1.0",
-        "backbone": "1.1.2",
         "express": "3.4.8",
         "temp": "0.7.0"
     }
