--- a/bower.json
+++ b/bower.json
@@ -2,8 +2,8 @@
   "name": "quote-app-ui",
   "version": "0.0.1",
   "dependencies": {
-        "jquery": "2.1.0",
-        "backbone": "1.1.2"
-  },
-  "devDependencies": {}
+      "jquery": "2.1.0",
+      "backbone": "1.1.2",
+      "requirejs": "2.1.11"
+  }
 }
