--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,12 @@
   "dependencies": {
       "jquery": "2.1.0",
       "backbone": "1.1.2",
-      "requirejs": "2.1.11"
+      "requirejs": "2.1.11",
+      "react": "0.10.0"
+  },
+  "exportsOverride": {
+      "react": {
+      "": "JSXTransformer.js"
+    }
   }
 }
