Copy the react.js correctly to the build directory.

--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,7 @@
   },
   "exportsOverride": {
       "react": {
-      "": "JSXTransformer.js"
+      "js": ["react.js", "JSXTransformer.js"]
     }
   }
 }
