--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "grunt-contrib-copy": "0.5.0",
         "grunt-contrib-clean": "0.5.0",
         "grunt-bower-task": "0.3.4",
+        "grunt-contrib-jshint": "0.10.0",
         "grunt-cli": "0.1.13",
         "bower": "1.3.2"
     },
