--- a/bower.json
+++ b/bower.json
@@ -2,14 +2,9 @@
   "name": "quote-app-ui",
   "version": "0.0.1",
   "dependencies": {
-      "jquery": "2.1.0",
       "backbone": "1.1.2",
-      "requirejs": "2.1.11",
-      "react": "0.10.0"
-  },
-  "exportsOverride": {
-      "react": {
-      "js": ["react.js", "JSXTransformer.js"]
-    }
+      "jquery": "2.1.0",
+      "react": "0.10.0",
+      "requirejs": "2.1.11"
   }
 }
