--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "grunt-bower-task": "0.3.4",
         "grunt-contrib-jshint": "0.10.0",
         "grunt-cli": "0.1.13",
+        "grunt-react": "0.8.2",
+        "react-tools": "0.10.0",
         "bower": "1.3.2"
     },
     "dependencies": {
