--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
     "version": "0.0.1",
     "private": true,
     "devDependencies": {
+        "bower": "1.3.2",
         "grunt": "0.4.4",
-        "grunt-contrib-copy": "0.5.0",
-        "grunt-contrib-clean": "0.5.0",
         "grunt-bower-task": "0.3.4",
-        "grunt-contrib-jshint": "0.10.0",
         "grunt-cli": "0.1.13",
+        "grunt-contrib-clean": "0.5.0",
+        "grunt-contrib-copy": "0.5.0",
+        "grunt-contrib-jshint": "0.10.0",
         "grunt-react": "0.8.2",
-        "react-tools": "0.10.0",
-        "bower": "1.3.2"
+        "react-tools": "0.10.0"
     },
     "dependencies": {
         "express": "3.4.8",
-        "temp": "0.7.0",
-        "mongoose": "3.8.8"
+        "mongoose": "3.8.8",
+        "temp": "0.7.0"
     }
 }
